# uvccapture2

./: CMakeLists.txt  LICENSE.md  README.md
cmake/: CPackConfig.cmake.in  PackageDescription.txt
src/: CMakeLists.txt  uvccapture2.cpp
